--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
 .task, .input {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 .task-row-wrapper {
   display: flex;
@@ -116,7 +116,7 @@ input,button{
   width: 226px;
 }
 .list-item > .input {
-  width: 226px
+  width: 226px;
 }
 .remove-img {
   height: 2em;
@@ -129,18 +129,18 @@ input,button{
 
 /* Completed */
 .list#completed-tasks .label {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 .list .list-item .input {
-  display: none
+  display: none;
 }
 
 .list .list-item.edit-mode .input {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .list .edit-mode .task {
