--- a/style.css
+++ b/style.css
@@ -27,7 +27,8 @@
   width: 500px;
   margin: 0 auto 0;
 }
-.task, .input {
+.task,
+.input {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
@@ -39,10 +40,12 @@ ul {
   margin: 0;
   padding: 0px;
 }
-li, h3 {
+li,
+h3 {
   list-style: none;
 }
-input,button{
+input,
+button {
   outline: none;
 }
 .button {
