fix(no-rule): add line-through to completed tasks

--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ button {
 }
 
 /* Completed */
-.list#completed-tasks .label {
+.list#completed-tasks .task {
   text-decoration: line-through;
   color: #888;
 }
