refactor(extended-2.1): update classes according to BEM notation

--- a/style.css
+++ b/style.css
@@ -19,21 +19,21 @@ input[type="radio"].visually-hidden {
   color: #333;
   font-family: Lato, sans-serif;
 }
-.matrix {
+.header {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
-.matrix-img {
+.header__img {
   width: 100%;
 }
-.matrix-inf-link {
+.header__link {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-  .matrix {
+  .header {
     text-align: center;
   }
 }
@@ -42,13 +42,14 @@ input[type="radio"].visually-hidden {
   width: 500px;
   margin: 0 auto 0;
 }
-.task,
-.input {
+.tasks-item__label,
+.tasks-item__edit-input,
+.todo-list__add-input {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
-.task-row-wrapper {
+.todo-list__task-wrapper {
   display: flex;
 }
 ul {
@@ -63,7 +64,8 @@ input,
 button {
   outline: none;
 }
-.button {
+.tasks-item__button,
+.todo-list__add-button {
   background: none;
   border: 0px;
   color: #888;
@@ -72,12 +74,13 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-.button:hover {
+.tasks-item__button:hover,
+.todo-list__add-button:hover {
   color: #3a3a3a;
 }
 /* Heading */
-.title,
-.new-task-lable {
+.todo-list__title,
+.todo-list__label {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -86,7 +89,8 @@ button {
   margin: 0;
   text-transform: uppercase;
 }
-.input {
+.tasks-item__edit-input,
+.todo-list__add-input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -98,21 +102,22 @@ button {
   font-family: Lato, sans-serif;
   color: #888;
 }
-.input:focus {
+.tasks-item__edit-input:focus,
+.todo-list__add-input:focus {
   color: #333;
 }
 
 /* New Task */
-.new-task-lable {
+.todo-list__label--task-add {
   display: block;
   margin: 0 0 20px;
 }
-.input#new-task {
+.todo-list__add-input#new-task {
   width: 318px;
 }
 
 /* Task list */
-.list-item {
+.tasks-item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -120,47 +125,47 @@ button {
   justify-content: space-between;
   align-items: center;
 }
-.list-item > * {
+.tasks-item > * {
   vertical-align: middle;
 }
 
-.complete-task-input {
+.tasks-item__complete-input{
   margin: 0 10px;
 }
-.list-item > .task {
+.tasks-item > .tasks-item__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-.list-item > .input {
+.tasks-item > .todo-list__edit-input {
   width: 226px;
 }
-.remove-img {
+.tasks-item__remove-img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-.remove-img:hover {
+.tasks-item__remove-img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-.list#completed-tasks .task {
+.tasks#completed-tasks .tasks-item__label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-.list .list-item .input {
+.tasks-item .tasks-item__edit-input {
   display: none;
 }
 
-.list .list-item.edit-mode .input {
+.tasks-item.edit-mode .tasks-item__edit-input {
   display: inline-block;
   width: 224px;
 }
 
-.list .edit-mode .task {
+.edit-mode .tasks-item__label {
   display: none;
 }
